# RoboTele

./: .gitignore  CMakeLists.txt
ArmSolver/: CMakeLists.txt
ArmSolver/ArmSolver/: ArmSolver.cpp  CMakeLists.txt
ArmSolver/G1Dof23DualArmSolver/: CMakeLists.txt  G1Dof23DualArmSolver.cpp
ArmSolver/G1Dof29DualArmSolver/: CMakeLists.txt  G1Dof29DualArmSolver.cpp
ArmSolver/GenericDualArmSolver/: CMakeLists.txt  GenericDualArmSolver.cpp
ArmSolver/Ti5DualArmSolver/: Ti5DualArmSolver.cpp
BasicSolver/: CMakeLists.txt
BasicSolver/HeadSolver/: CMakeLists.txt  HeadSolver.cpp
BasicSolver/WaistSolver/: CMakeLists.txt  WaistSolver.cpp
CoordinateTransform/VisionPro2Ti5RobotTransform/: VisionPro2Ti5RobotTransform.cpp
Core/: CMakeLists.txt
Core/CanDriver/: CMakeLists.txt
Core/CsvWriter/: CsvWriter.cpp
Core/DataCollector/: CMakeLists.txt  DataCollector.cpp  VisionProData.pb.cc  VisionProData.pb.h
Core/JsonParser/: JsonParser.cpp
Core/WeightedMovingFilter/: WeightedMovingFilter.cpp
Demo/: CMakeLists.txt
Demo/BasicSolverDemo/: BasicSolverDemo.cpp
Demo/CanDriverDemo/: CMakeLists.txt  CanDriverDemo.cpp
Demo/CrpRobotDemo/: CMakeLists.txt  CrpRobotDemo.cpp
Demo/HandDemo/: CMakeLists.txt  HandDemo.cpp
Demo/MainDemo/: CMakeLists.txt  MainDemo.cpp
Demo/ModBusDemo/: CMakeLists.txt  ModBusDemo.cpp
Demo/PinocchioDemo/: PinocchioDemo.cpp
Demo/RobotDemo/: CMakeLists.txt  RobotDemo.cpp
DualArmSolver/: CMakeLists.txt
DualArmSolver/DualArmSolver/: CMakeLists.txt  DualArmSolver.cpp
DualArmSolver/Ti5RobotDualArmSolver/: CMakeLists.txt  Ti5RobotDualArmSolver.cpp
FastDDSInterface/JointState/: JointStatePubSubTypes.cxx
GUI/: CMakeLists.txt
GUI/Ti5RobotBasicControlGUI/: CMakeLists.txt  Ti5RobotBasicControlGUI.cpp  Ti5RobotBasicControlGUI.h  Ti5RobotBasicControlGUI.ui
GUI/Ti5RobotTeleoperateGUI/: CMakeLists.txt  Ti5RobotTeleoperateGUI.cpp  Ti5RobotTeleoperateGUI.h  Ti5RobotTeleoperateGUI.ui  main.cpp
HandController/HandController/: CMakeLists.txt  HandController.cpp
HandController/ROHandController/: CMakeLists.txt  ROHandController.cpp
HandSolver/: CMakeLists.txt
HandSolver/HandGestureDetector/: HandGestureDetector.cpp
HandSolver/HandSolver/: CMakeLists.txt  HandSolver.cpp
HandSolver/VisionProHandSolver/: CMakeLists.txt  VisionProHandSolver.cpp
PhysicalRobot/: CMakeLists.txt
PhysicalRobot/PhysicalRobot/: CMakeLists.txt  PhysicalRobot.cpp
PhysicalRobot/Ti5PhysicalRobot/: CMakeLists.txt  Ti5PhysicalRobot.cpp
RobotHardware/: CMakeLists.txt
RobotHardware/G1Dof23Hardware/: CMakeLists.txt  G1Dof23Hardware.cpp
RobotHardware/G1Dof29Hardware/: CMakeLists.txt  G1Dof29Hardware.cpp
RobotHardware/RobotHardware/: CMakeLists.txt  RobotHardware.cpp
RobotHardware/Ti5PhysicalRobot/: CMakeLists.txt  Ti5PhysicalRobot.cpp
RobotHardware/Ti5RobotHardware/: Ti5RobotHardware.cpp
Teleoperate/: CMakeLists.txt
Teleoperate/GenericTeleoperate/: GenericTeleoperate.cpp
Teleoperate/RobotTeleoperate/: CMakeLists.txt  RobotTeleoperate.cpp
Teleoperate/Ti5RobotTeleoperate/: Ti5RobotTeleoperate.cpp
Teleoperate/UnitreeG1Teleoperate/: UnitreeG1Teleoperate.cpp
ThirdPartyLibs/cmake/: DetectPlatform.cmake  FindTi5RobotCtrl.cmake  FindTi5RobotSDK.cmake
Transform/: CMakeLists.txt
Transform/Transform/: CMakeLists.txt  Transform.cpp
Transform/VisionPro2Ti5RobotTransform/: VisionPro2Ti5RobotTransform.cpp
Transform/VisionPro2UnitreeG1Transform/: VisionPro2UnitreeG1Transform.cpp
cmake/: ThirdPartyConfiguration.cmake  UserConfiguration.cmake
cmake/Modules/: FindBoost178.cmake  FindCasadi.cmake  FindEigen.cmake  FindFastcdr.cmake  FindFastdds.cmake  FindLibmodbus.cmake  FindNLopt.cmake  FindPackage.cmake  FindPinocchio.cmake  FindProtobuf.cmake  FindQt.cmake
cmake/PackagePathPerUser/: CHF_Ubuntu.cmake  PK_Ubuntu.cmake  Ti5Robot_Ubuntu.cmake
cmake/package_path_per_user/: CrpRobot_Ubuntu.cmake
config/ArmSolver/: AgiBotX1DualArm.json  CrpDualArm.json  FourierGR1DualArm.json  FourierN1DualArm.json  G1Dof23DualArm.json  G1Dof29DualArm.json  Ti5DualArm.json  UnitreeH1DualArm.json
config/RobotHardware/: UnitreeG1Dof23.json
config/Teleoperate/: AgiBotX1.json  CrpRobot.json  FourierGR1.json  FourierN1.json  Ti5Robot.json  UnitreeG1Dof23.json  UnitreeG1Dof29.json  UnitreeH1.json
config/Transform/: VisionPro2AgiBotX1.json  VisionPro2CrpRobot.json  VisionPro2FourierGR1.json  VisionPro2Ti5Robot.json  VisionPro2UnitreeH1.json
data/: 20260123_092201.csv
docs/: Installation-Guide-ch.md  Installation-Guide-en.md  Installation-Guide-zh.md  Installation-Guide.md  RoboTele安装文档.md  televuer安装文档.md  安装文档.md  说明文档.md
include/common/: FunctionLogger.hpp  HandBase.hpp  MatrixUtils.hpp  RobotBase.hpp  RobotType.hpp  XRBase.hpp
log/2026-01-15/: 20260115_114013.csv
log/2026-01-16/: 20260116_153118.csv
log/2026-01-19/: 20260119_092039.csv  20260119_092340.csv  20260119_092444.csv  20260119_092619.csv  20260119_093039.csv  20260119_093340.csv  20260119_094359.csv  (+5 more)
src/Demo/: CMakeLists.txt
src/Demo/BasicSolverDemo/: BasicSolverDemo.cpp  CMakeLists.txt
src/Demo/CanDriverDemo/: CanDriverDemo.cpp
src/Demo/HandDemo/: CMakeLists.txt
src/Demo/MainDemo/: CMakeLists.txt  MainDemo.cpp
src/Demo/ModBusDemo/: ModBusDemo.cpp
src/Demo/PinocchioDemo/: CMakeLists.txt
src/Demo/ROHandDemo/: CMakeLists.txt  ROHandDemo.cpp
src/Demo/Revo2HandDemo/: CMakeLists.txt  Revo2HandDemo.cpp
src/Demo/RobotDemo/: RobotDemo.cpp
src/Demo/SocketDemo/: CMakeLists.txt
utils/televuer/: .gitignore  pyproject.toml
utils/televuer/VisionProData/: VisionProData.proto  VisionProData_pb2.py
utils/televuer/data/: 20250929_152433.csv  20251125_100933.csv  20251125_111646.csv  20251125_134759.csv  20251125_135345.csv  20251127_105401.csv  20251127_105921.csv  20251127_110124.csv  20251128_134754.csv  20251128_161158.csv  20251129_092926.csv
utils/televuer/scripts/: check_data.py  find_video.py  get_data_from_vuer.py  linear_fit.py  plot_algorithm_compare.py  plot_arm_trajectory.py  receive_data.py  send_offline_data.py  send_online_data.py
utils/televuer/src/televuer/: televuer.py
(+128 files in other folders)
